# ZigbeeControl

./: .copier-answers.yml  .env.example  .gitignore  AGENTS.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  run.py  vulture_whitelist.py
.llmbox/: docker-compose.yml
app/: __init__.py  app.py  app_config.py  cli.py  config.py  consts.py  exceptions.py  startup.py
app/api/: __init__.py  auth.py  config.py  health.py  metrics.py  oidc_hooks.py  restart.py  sse.py  status.py  tasks.py  testing_auth.py  testing_guard.py  testing_logs.py  testing_sse.py
app/models/: __init__.py
app/schemas/: __init__.py  auth.py  common.py  config.py  health_schema.py  sse_gateway_schema.py  status.py  task_schema.py  testing_auth.py  testing_sse.py
app/services/: __init__.py  auth_service.py  base_task.py  config_service.py  container.py  exceptions.py  frontend_version_service.py  health_service.py  kubernetes_service.py  metrics_service.py  oidc_client_service.py  sse_connection_manager.py  status_broadcaster.py  tab_status_service.py  task_service.py  testing_service.py
app/utils/: __init__.py  auth.py  config_loader.py  cors.py  flask_error_handlers.py  lifecycle_coordinator.py  log_capture.py  request_parsing.py  spectree_config.py  sse.py  sse_utils.py  temp_file_manager.py  text_utils.py  url_utils.py
docs/: product_brief.md
docs/features/backend_z2m_wrapper/: plan.md
docs/features/cookie_auth/: plan.md
docs/features/sse_heartbeats/: plan.md
scripts/: args.sh  build.sh  check.py  dev-server.sh  dev-sse-gateway.sh  initialize-sqlite-database.sh  testing-server.sh
test/: tabs.yaml
tests/: conftest.py  conftest_infrastructure.py
tests/api/: test_auth_endpoints.py  test_config_endpoint.py  test_restart_endpoint.py
tests/services/: test_kubernetes_service.py  test_status_broadcaster.py  test_tab_status_service.py
tests/utils/: test_cors.py  test_sse.py
