[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "z2m-wrapper-backend"
version = "0.1.0"
description = "Flask backend for the Z2M Wrapper project"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "Flask>=3.0.0,<4",
    "pydantic>=2.6.0,<3",
    "spectree>=1.5.0,<2",
    "PyYAML>=6.0",
    "kubernetes>=28.0.0,<29",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
